<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:padding="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_description"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/developer"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="J E"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="HardcodedText" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/contact"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Jacobel640@gmail.com"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:ignore="HardcodedText" />

    </FrameLayout>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_gravity="center"
        android:padding="10dp"
        />

</LinearLayout>