<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shortcut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/create_shortcut"
        android:textColor="@color/text"
        android:backgroundTint="@color/white"
        app:iconTint="@color/text"
        app:icon="@drawable/create_shortcut"
        app:cornerRadius="12dp"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_size"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        style="@style/TextAppearance.Material3.LabelLarge"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/smaller_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:textSize="15sp"
            android:text="@string/text_size_indicator"
            android:textStyle="bold"
            android:fontFamily="@font/times"
            app:cornerRadius="12dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bigger_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:textSize="25sp"
            android:text="@string/text_size_indicator"
            android:textStyle="bold"
            android:fontFamily="@font/times"
            app:cornerRadius="12dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/font"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        style="@style/TextAppearance.Material3.LabelLarge"
        />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        >

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/fonts_chooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            app:singleSelection="true"
            >

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_layout"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:padding="5dp"
        style="@style/TextAppearance.Material3.LabelLarge"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/align_justify"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:textSize="25sp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            app:iconGravity="textEnd"
            app:icon="@drawable/align_justify"
            app:cornerRadius="12dp"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/align_right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:textSize="25sp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            app:iconGravity="textStart"
            app:icon="@drawable/align_left"
            app:cornerRadius="12dp"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>